change page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 
 <head>
-	<title>M<sup>x</sup>UI</title>
+	<title>MUI</title>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61647044-7"></script>
