Update header image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Horizons by TEMPLATED</title>
+		<title>Multiscale Universal Interface (MUI)</title>
+		<link rel="icon" href="images/mui_icon.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -29,7 +30,7 @@
 				<div class="container">
 						
 					<!-- Logo -->
-						<h1><a href="#" id="logo">Horizons</a></h1>
+						<h1><a href="#" id="logo">Multiscale Universal Interface Code Coupling Library</a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
