--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Multiscale Universal Interface (MUI)</title>
 		<link rel="icon" href="images/mui_icon.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -68,7 +69,7 @@
 								<section>
 									<header class="major">
 										<h2>Welcome to Horizons!</h2>
-										<span class="byline">&hellip; a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit!</span>
+										<span class="byline">The Multiscale Universal Interface, or MUI, library is a </span>
 									</header>
 									<a href="#" class="button alt">Sign Up</a>
 								</section>			
