--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Multiscale Universal Interface (MUI)</title>
 		<link rel="icon" href="images/mui_icon.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
