--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Multiscale Universal Interface (MUI)</title>
-		<link rel="icon" href="images/mui_icon.png">
+		<title>MxUI Coupling Framework</title>
+		<link rel="icon" href="images/mui_logo.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,34 +31,17 @@
 				<div class="container">
 						
 					<!-- Logo -->
-						<h1><a href="#" id="logo">Multiscale Universal Interface Code Coupling Library</a></h1>
+						<h1><a href="#" id="logo"><img src="images/mui_logo.png" alt="MxUI Logo" height="50px">M<sup>x</sup>UI Coupling Framework</a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="overview.html">Overview</a></li>
+								<li><a href="examples.html">Coupling Examples</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="downloads.html">Downloads</a></li>
+								<li><a href="about.html">About</a></li>
 							</ul>
 						</nav>
 
@@ -68,10 +51,8 @@
 							<div class="container">
 								<section>
 									<header class="major">
-										<h2>Welcome to Horizons!</h2>
-										<span class="byline">The Multiscale Universal Interface, or MUI, library is a </span>
+										<span class="byline">The M<sup>x</sup>UI coupling framework is a joint effort between Brown University, Lawrence-Berkeley National Laboratory, UK Research & Innovation (UKRI) and IBM Research.</span>
 									</header>
-									<a href="#" class="button alt">Sign Up</a>
 								</section>			
 							</div>
 						</div>
