Overall site changes

--- a/overview.html
+++ b/overview.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>MxUI Coupling Framework</title>
+		<title>MxUI: Overview</title>
 		<link rel="icon" href="images/mui_logo.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -35,7 +35,7 @@
             		
 			<div class="container">					
 				<!-- Logo Text -->
-				<h1 id="logotext">M<sup>x</sup>UI Coupling Framework</h1>
+				<h1 id="logotext">M<sup>x</sup>UI Coupling Framework: Overview</h1>
 				
 				<!-- Nav -->
 				<nav id="nav">
@@ -51,27 +51,6 @@
 
 				<!-- Banner -->
 				<div id="banner">
-					<div class="container">
-						<section>
-							<header class="major">
-								<span class="byline">The M<sup>x</sup>UI HPC code coupling framework is a joint effort between <a target=”_blank” href="https://www.brown.edu/">Brown University</a>, 
-										     <a target=”_blank” href="https://www.lbl.gov/">Lawrence Berkeley National Laboratory</a>, 
-										     <a target=”_blank” href="https://stfc.ukri.org/">UK Research & Innovation Science &amp; Technology Facilities Council</a> 
-										     and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as GPLv3 
-										     and Apache v2.0.
-								</span>
-								<br><br>
-								<span class="byline">Libraries and tutorial cases associated with M<sup>x</sup>UI are provided through 
-										    <a target="_blank" href="https://github.com/MxUI">GitHub</a>
-								</span>
-								<br>							
-								<a class="github-button" href="https://github.com/MxUI" aria-label="Follow @MxUI on GitHub">Follow @MxUI</a>
-								<a class="github-button" href="https://github.com/MxUI/MUI" data-icon="octicon-star" aria-label="Star MxUI/MUI on GitHub">Star</a>
-								<a class="github-button" href="https://github.com/MxUI/MUI/fork" data-icon="octicon-repo-forked" aria-label="Fork MxUI/MUI on GitHub">Fork</a>
-								<a class="github-button" href="https://github.com/MxUI/MUI/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download MxUI/MUI on GitHub">Download</a>										
-							</header>
-						</section>			
-					</div>
 				</div>
 			</div>
 		</div>
@@ -79,21 +58,8 @@
 		<!-- Featured -->
 		<div class="wrapper style2" style="font-size: 1.2em;">
 			<section class="container">
-				<p>The key library of this suite, the Multiscale Universal Interface (MUI), provides a C++ header-only implementation that is based around the MPI 
-				   Multiple-Program Multiple-Data paradigm and quickly embeds into new and existing codes. It enables either tight or loose coupling of the 
-				   physics of a problem by creating an interface between the codes that data such as velocity, force or pressure is passed through. MUI is a high-level library 
-				   that enables message passing in complex multi-program scenarios using only a few lines of additional code and with no need to keep track of complex communication 
-				   world patterns. Wrappers are provided for C and Fortran with Python coming soon.
+				<p>Insert MUI features.
 				</p>
-				<p>It is especially useful in HPC environments, where it can minimise communications between ranks of two or more MPI-parallelised codes. 
-				   MUI also provides capability to interpolate data both in space and time, it provides a number of defauly interpolations and is also 
-				   designed to be easily extensible.
-				</p>
-				<p><b>Tang Y.-H., Kudo, S., Bian, X., Li, Z., & Karniadakis, G. E. <i>Multiscale Universal Interface: A Concurrent Framework for Coupling Heterogeneous Solvers</i>, 
-				   Journal of Computational Physics, 2015, 297.15, 13-31.</b>
-				</p>
-				<section class="image feature">
-					<img src="images/MUI_overview.png" alt="">
 				</container>
 			</section>
 		</div>		
