--- a/examples.html
+++ b/examples.html
@@ -73,7 +73,7 @@
 				<a class="github-button" href="https://github.com/MxUI/MUI/archive/master.zip" data-size="large" data-icon="octicon-cloud-download" aria-label="Download MxUI/MUI on GitHub">Download</a>	
 				<!-- Copyright -->
 				<div class="copyright">
-					&copy; Copyright the MxUI consortium (content derived from: <a href="http://templated.co">TEMPLATED</a>)
+					&copy; Copyright the MxUI consortium (design derived from: <a href="http://templated.co">TEMPLATED</a>)
 				</div>
 			</div>
 		</div>
