--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<span class="byline">The M<sup>x</sup>UI HPC code coupling framework is a joint effort between <a target=”_blank” href="https://www.brown.edu/">Brown University</a>, 
 										     <a target=”_blank” href="https://www.lbl.gov/">Lawrence Berkeley National Laboratory</a>, 
 										     <a target=”_blank” href="https://stfc.ukri.org/">UK Research & Innovation Science &amp; Technology Facilities Council</a> 
-										     and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as GPLv3 
-										     and Apache v2.0.
+										     and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as <a target="_blank" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a> 
+										     and <a target="_blank" href="https://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>.
 								</span>
 								<br><br>
 								<span class="byline">Libraries and tutorial cases associated with M<sup>x</sup>UI are provided through 
@@ -82,7 +82,7 @@
 				   Multiple-Program Multiple-Data paradigm and quickly embeds into new and existing codes. It enables either tight or loose coupling of the 
 				   physics of a problem by creating an interface between the codes that data such as velocity, force or pressure is passed through. MUI is a high-level library 
 				   that enables message passing in complex multi-program scenarios using only a few lines of additional code and with no need to keep track of complex communication 
-				   world patterns. Wrappers are provided for C and Fortran with others coming soon.
+				   world patterns. Wrappers are provided for C and Fortran, with more coming soon.
 				</p>
 				<p>It is especially useful in HPC environments, where it can minimise communications between ranks of two or more MPI-parallelised codes. 
 				   MUI also provides capability to interpolate data both in space and time, it provides a number of default interpolations and is also 
