--- a/examples.html
+++ b/examples.html
@@ -57,9 +57,35 @@
 		<!-- Featured -->
 		<div class="wrapper style2" style="font-size: 1.2em;">
 			<section class="container">
-				<p>Insert MUI examples.
-				</p>
-				</container>
+				<p><b>MUI is designed to be easily integrated into new and existing scientific codes to enable their coupling. The focus of this library is not on coupling specific codes, 
+				instead it is to define a general framework for coupling different types of <i>physics</i> that can then be re-used in different solvers by their developers.</b></p>
+				<p>These examples highlight the details of how MUI has been used to enable the coupled solution to a certain type of problem.</p>
+			</section>
+			<section class="container">
+				<div class="divTable">
+					<div class="divTableBody">
+						<div class="divTableHeading">
+							<div class="divTableCell">Problem</div>
+							<div class="divTableCell">Description</div>
+							<div class="divTableCell">MUI Specifics</div>
+							<div class="divTableCell">Codes</div>
+						</div>
+						<div class="divTableRow">
+							<div class="divTableCell">Test</div>
+							<div class="divTableCell">Test</div>
+							<div class="divTableCell">Test</div>
+							<div class="divTableCell">
+								<div class="divTable">
+									<div class="divTableBody">
+										<div class="divTableRow">
+											<div class="divTableCell">Test</div>
+										</div>
+									</div>
+								</div>							
+							</div>
+						</div>
+					</div>
+				</div>		
 			</section>
 		</div>		
 
