Add acknowledgements to About

--- a/about.html
+++ b/about.html
@@ -102,6 +102,13 @@
 						<li><a href="#"><a target="_blank" href="http://www.cse-lab.ethz.ch/member/xin-bian/">Dr Xin Bian (ETH Zurich)</a></li>
 					</ul>
 				</section>
+				<br>
+				<header class="byline" style="text-align:left;">
+					<h1>Acknowledgements</h1>
+				</header>
+				<section style="text-align: left;">					
+					<p>This work was supported in part by the STFC Hartree Centre’s Innovation Return on Research programme, funded by the Department for Business, Energy & Industrial Strategy.</p>
+				</section>
 			</section>
 		</div>		
 
