Update index page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										     <a target=”_blank” href="https://www.lbl.gov/">Lawrence Berkeley National Laboratory</a>, 
 										     <a target=”_blank” href="https://stfc.ukri.org/">UK Research & Innovation Science &amp; Technology Facilities Council</a> 
 										     and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as <a target="_blank" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a> 
-										     and <a target="_blank" href="https://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>.
+										     or <a target="_blank" href="https://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>.
 								</span>
 								<br><br>
 								<span class="byline">Libraries and tutorial cases associated with M<sup>x</sup>UI are provided through 
