--- a/index.html
+++ b/index.html
@@ -54,15 +54,10 @@
 						<section>
 							<header class="major">
 								<span class="byline">The M<sup>x</sup>UI HPC code coupling framework is a joint effort between <a target=”_blank” href="https://www.brown.edu/">Brown University</a>, 
-										     <a target=”_blank” href="https://www.lbl.gov/">Lawrence Berkeley National Laboratory</a>, 
-										     <a target=”_blank” href="https://stfc.ukri.org/">UK Research & Innovation Science &amp; Technology Facilities Council</a> 
-										     and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as <a target="_blank" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a> 
-										     or <a target="_blank" href="https://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>.
+									<a target=”_blank” href="https://www.lbl.gov/">Lawrence Berkeley National Laboratory</a>, <a target=”_blank” href="https://stfc.ukri.org/">UK Research & Innovation Science &amp; Technology Facilities Council</a> and <a target=”_blank” href="http://www.research.ibm.com/">IBM Research</a>. The main library is jointly licensed as <a target="_blank" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a> or <a target="_blank" href="https://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>.
 								</span>
 								<br><br>
-								<span class="byline">Libraries and tutorial cases associated with M<sup>x</sup>UI are provided through 
-										    <a target="_blank" href="https://github.com/MxUI">GitHub</a>
-								</span>
+								<span class="byline">Libraries and tutorial cases associated with M<sup>x</sup>UI are provided through <a target="_blank" href="https://github.com/MxUI">GitHub</a></span>
 								<br>							
 								<a class="github-button" href="https://github.com/MxUI" aria-label="Follow @MxUI on GitHub">Follow @MxUI</a>
 								<a class="github-button" href="https://github.com/MxUI/MUI" data-icon="octicon-star" aria-label="Star MxUI/MUI on GitHub">Star</a>
