Add Python wrapper text

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 		<div class="wrapper style2" style="font-size: 1.2em;">
 			<section class="container">
 				<p>The key library of this suite, the Multiscale Universal Interface (MUI), provides a C++ header-only implementation that is based around the MPI 
-				   Multiple-Program Multiple-Data paradigm and quickly embeds into new and existing codes. It enables either tight or loose coupling of the 
+				   Multiple-Program Multiple-Data (MPMPD) paradigm and quickly embeds into new and existing codes. It enables either tight or loose coupling of the 
 				   physics of a problem by creating an interface between the codes that data such as velocity, force or pressure is passed through. MUI is a high-level library 
 				   that enables message passing in complex multi-program scenarios using only a few lines of additional code and with no need to keep track of complex communication 
-				   world patterns. Wrappers are provided for C and Fortran, with more coming soon.
+				   world patterns. Wrappers are provided for Python, C and Fortran.
 				</p>
 				<p>It is especially useful in HPC environments, where it can minimise communications between ranks of two or more MPI-parallelised codes. 
 				   MUI also provides capability to interpolate data both in space and time, it provides a number of default interpolations and is also 
