Updated About page

--- a/about.html
+++ b/about.html
@@ -86,21 +86,20 @@
 					<ul>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/Stephen-Longshaw.aspx">Dr Stephen M. Longshaw</a></li>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/Alex-Skillen.aspx">Dr Alex Skillen</a></li>
-						<li><a href="#"><a target="_blank" href="https://ibethune.github.io/">Mr Iain Bethune</a></li>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/David-Emerson.aspx">Professor David R. Emerson</a></li>
 					</ul>
 					<br>
 					<span class="byline"><b>IBM Research</b></span>
 					<ul>
-						<li><a href="#"><a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=uk-ChrisThompson">Professor Christopher Thompson</a></li>
 						<li><a href="#"><a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=uk-RSawko">Dr Robert Sawko</a></li>
 						<li><a href="#"><a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=uk-Malgorzata.Zimon">Dr Malgorzata Zimon</a></li>
 					</ul>
 					<br>
 					<span class="byline"><b>Other contributors</b></span>
 					<ul>
-						<li><a href="#"><a target="_blank" href="http://www.r-ccs.riken.jp/labs/lpnctrt/en/members/">Dr Shuhei Kudo (RIKEN Center for Computational Science)</a></li>
-						<li><a href="#"><a target="_blank" href="http://www.cse-lab.ethz.ch/member/xin-bian/">Dr Xin Bian (ETH Zurich)</a></li>
+						<li><a href="#"><a target="_blank" href="https://www.riken.jp/en/research/labs/r-ccs/index.html">Dr Shuhei Kudo (RIKEN Center for Computational Science)</a></li>
+						<li><a href="#"><a target="_blank" href="https://person.zju.edu.cn/en/bianx">Dr Xin Bian (Zhejiang University)</a></li>
+                        <li><a href="#"><a target="_blank" href="https://ibethune.github.io/">Iain Bethune</a></li>
 					</ul>
 				</section>
 				<br>
