Update about page

--- a/about.html
+++ b/about.html
@@ -71,21 +71,22 @@
 					<h1>Key contributors:</h1>
 				</header>
 				<section style="text-align: left;">					
+					<span class="byline"><b>Lawrence Berkeley National Laboratory</b></span>
+					<ul>
+						<li><a href="#"><a target="_blank" href="https://crd.lbl.gov/divisions/amcr/applied-mathematics-dept/scalable-solvers/members/staff-members/yu-hang-tang/">Dr Yu-Hang Tang</a></li>
+					</ul>
+					<br>
 					<span class="byline"><b>Brown University</b></span>
 					<ul>
 						<li><a href="#"><a target="_blank" href="https://www.brown.edu/research/projects/crunch/george-karniadakis">Professor George Em Karniadakis</a></li>
-						<li><a href="#"><a target="_blank" href="https://www.brown.edu/research/projects/crunch/about/people/postdocs-students-and-visiting-scholars">Dr Zhen Li</a></li>
-					</ul>
-					<br>
-					<span class="byline"><b>Lawrence Berkeley National Laboratory</b></span>
-					<ul>
-						<li><a href="#"><a target="_blank" href="https://crd.lbl.gov/departments/computational-science/ccmc/staff/alvarez-fellows/yu-hang-tang/">Dr Yu-Hang Tang</a></li>
+						<li><a href="#"><a target="_blank" href="https://www.dam.brown.edu/people/zhenli/">Dr Zhen Li</a></li>
 					</ul>
 					<br>
 					<span class="byline"><b>The Science &amp; Technology Facilities Council</b></span>
 					<ul>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/Stephen-Longshaw.aspx">Dr Stephen M. Longshaw</a></li>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/Alex-Skillen.aspx">Dr Alex Skillen</a></li>
+						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/Wendi-Liu.aspx">Dr Wendi Liu</a></li>
 						<li><a href="#"><a target="_blank" href="https://www.scd.stfc.ac.uk/Pages/David-Emerson.aspx">Professor David R. Emerson</a></li>
 					</ul>
 					<br>
@@ -99,16 +100,9 @@
 					<ul>
 						<li><a href="#"><a target="_blank" href="https://www.riken.jp/en/research/labs/r-ccs/index.html">Dr Shuhei Kudo (RIKEN Center for Computational Science)</a></li>
 						<li><a href="#"><a target="_blank" href="https://person.zju.edu.cn/en/bianx">Dr Xin Bian (Zhejiang University)</a></li>
-                        <li><a href="#"><a target="_blank" href="https://ibethune.github.io/">Iain Bethune</a></li>
+                        			<li><a href="#"><a target="_blank" href="https://ibethune.github.io/">Dr Iain Bethune</a></li>
 					</ul>
-				</section>
-				<br>
-				<header class="byline" style="text-align:left;">
-					<h1>Acknowledgements</h1>
-				</header>
-				<section style="text-align: left;">					
-					<p>This work was supported in part by the STFC Hartree Centre’s Innovation Return on Research programme, funded by the Department for Business, Energy & Industrial Strategy.</p>
-				</section>
+				</section>				
 			</section>
 		</div>		
 
@@ -121,7 +115,7 @@
 				<a class="github-button" href="https://github.com/MxUI/MUI/archive/master.zip" data-size="large" data-icon="octicon-cloud-download" aria-label="Download MxUI/MUI on GitHub">Download</a>	
 				<!-- Copyright -->
 				<div class="copyright">
-					&copy; Copyright the MxUI consortium (design derived from: <a href="http://templated.co">TEMPLATED</a>)
+					&copy; Copyright the MxUI consortium
 				</div>
 			</div>
 		</div>
